--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           src="https://avatars.githubusercontent.com/u/78271602?v=4"
           alt="Anurag's GitHub avatar"
         />
-        <h1>@apicgg</h1>
+        <h1>@Wee'z Om'i Bei'ves</h1>
       </header>
       <ul>
         <li>
