--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }, 1000);
       });
     </script>
-    <title>Anurag Pramanik - Links</title>
+    <title>Wee'z Om'i Bei'ves - Links</title>
   </head>
   <body>
     <div id="vanta"></div>
